--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 
-        				<link rel="stylesheet" href="/css/003b2e9.css" />
-		        		<link rel="stylesheet" href="/css/33ae5ef.css" />
+        				<link rel="stylesheet" href="css/003b2e9.css" />
+		        		<link rel="stylesheet" href="css/33ae5ef.css" />
         
 				<!--[if lt IE 9]>
 		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -47,7 +47,7 @@
 
 		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 		<script src="https://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
-				<script src="/js/54b711b.js"></script>
+				<script src="js/54b711b.js"></script>
 		
 			</head>
 
@@ -118,13 +118,13 @@
 				<i class="fa fa-bars"></i>
 			</div>
 			<div class="logo">
-				<a href="/ru/"><img src="/bundles/voirapplication/img/logo.svg"></a>
+				<a href="/ru/"><img src="bundles/voirapplication/img/logo.svg"></a>
 			</div>
 			<div class="years10">
-				<img src="/bundles/voirapplication/img/10-years.webp">
+				<img src="bundles/voirapplication/img/10-years.webp">
 			</div>
 			<div class="arms">
-				<img src="/bundles/voirapplication/img/arms.svg">
+				<img src="bundles/voirapplication/img/arms.svg">
 			</div>
 
 		
@@ -353,7 +353,7 @@
                         <div class=" col-xs-6">
                             <a href="http://i-r.ru/?ysclid=lnrpqbxrz1482792968" class="journal" target="_blank">
 
-                                <img src="/img/изобретатьель1.png" alt="">
+                                <img src="img/изобретатьель1.png" alt="">
 
                             </a>
 
@@ -362,7 +362,7 @@
                         <div class=" col-xs-6">
                             <a href="http://i-r.ru/?ysclid=lnrpqbxrz1482792968"  class="journal" target="_blank">
 
-                                <img src="/img/изобретатьель2.png" alt="">
+                                <img src="img/изобретатьель2.png" alt="">
 
                             </a>
 
@@ -371,7 +371,7 @@
                         <div class=" col-xs-6">
                             <a href="http://i-r.ru/?ysclid=lnrpqbxrz1482792968"  class="journal" target="_blank">
 
-                                <img src="/img/изобретатьель3.png" alt="">
+                                <img src="img/изобретатьель3.png" alt="">
 
                             </a>
 
@@ -380,7 +380,7 @@
                         <div class=" col-xs-6">
                             <a href="http://i-r.ru/?ysclid=lnrpqbxrz1482792968"  class="journal" target="_blank">
 
-                                <img src="/img/изобретатьель4.png" alt="">
+                                <img src="img/изобретатьель4.png" alt="">
 
                             </a>
 
