--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </li>
 
     
-                <li class="last">        <a href="/ru/news">Вступить в  ВОИР</a>        
+                <li class="last">        <a href="https://member-voir.ru">Вступить в  ВОИР</a>        
     </li>
 
 
